[project]
name = "krishnaik-llama-index-tutorials"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.9"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "chromadb>=1.4.1",
    "ipywidgets>=8.1.8",
    "jupyter>=1.1.1",
    "llama-index>=0.14.13",
    "llama-index-core>=0.14.13",
    "llama-index-embeddings-bedrock>=0.7.3",
    "llama-index-embeddings-huggingface>=0.6.1",
    "llama-index-embeddings-openai>=0.5.1",
    "llama-index-llms-anthropic>=0.10.6",
    "llama-index-llms-bedrock-converse>=0.12.4",
    "llama-index-llms-openai>=0.6.13",
    "llama-index-postprocessor-cohere-rerank>=0.5.1",
    "llama-index-readers-file>=0.5.6",
    "llama-index-vector-stores-chroma>=0.5.5",
    "llama-index-vector-stores-qdrant>=0.9.1",
    "lxml>=6.0.2",
    "matplotlib>=3.10.8",
    "notebook>=7.5.2",
    "numpy>=2.4.1",
    "pandas>=2.3.3",
    "pypdf>=6.6.0",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.1",
    "qdrant-client>=1.16.2",
    "requests>=2.32.5",
    "sentence-transformers>=5.2.0",
    "torch>=2.10.0",
    "tqdm>=4.67.1",
    "transformers>=4.57.6",
]
